drop down login/sign up for buttons

--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -3,7 +3,7 @@
         Welcome to DoseAlert: <p>The One Stop Shop For All Your Medical Needs</p>
     </div>
     <div id="enterButtons">
-        <button id="login" onClick="">Login</button>
+        <button id="login">Login</button>
         <button id="signUp">Sign up</button>
     </div>
 </div>
