added tabs with different patients information including: personal info, provider info, health info, and notifications. still have not managed to get to be a different page.

--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -22,6 +22,12 @@
 
 <div id="new-user">
   <form action="/newUser_info.php">
+    <label for="fname">First Name:</label>
+    <input type="text" id="first-name" name="fname" placeholder="First Name" required>
+
+    <label for="lname">Last Name:</label>
+    <input type="text" id="last-name" name="lname" placeholder="Last Name" required>
+
     <label for="UserID">Username:</label>
     <input type="text" id="UserID" name="username" placeholder="Username" required>
   
