fixed merge conficts

--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -9,6 +9,5 @@
 </div>
 
 <div id="entry"></div>
-
-<!-- User Homepage Section (will be dynamically populated) -->
+<div id="new-user"></div>
 <div id="user-homepage"></div>
