--- a/healthProject/src/user_home/user_home.component.html
+++ b/healthProject/src/user_home/user_home.component.html
@@ -41,7 +41,6 @@
 
   <div id="notifications" class="tabcontent">
     <h3>Recent Notifications:</h3>
-    <p>Upcoming Appointments: <span id="appointments"></span></p>
-    <p>Perscription Reminders: <span id="perscription-reminders"></span></p>
-
+    <p>Upcoming Appointments: </p><div id="appointments"></div>
+    <p>Perscription Reminders: </p><div id="perscription-reminders"></div>
   </div>
