tried to add images, did not work

--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -1,5 +1,6 @@
 <div id="welcome-banner">
   <div id="title-banner">
+    <img id="myimage" src="healthProject\src\app\images\Dose.png" alt="DoseAlert Logo">
       Welcome to DoseAlert: <p>The One Stop Shop For All Your Medical Needs</p>
   </div>
   <div id="enterButtons">
