--- a/healthProject/src/user_home/user_home.component.html
+++ b/healthProject/src/user_home/user_home.component.html
@@ -2,7 +2,7 @@
 <button class="tablink" id="patient-tab">Patient Information</button>
 <button class="tablink" id="provider-tab">Health Provider Information</button>
 <button class="tablink" id="health-tab">Perscription and Diagnoses</button>
-<button class="tablink" id="notifications-tab">Appointments and Notifications</button>
+<button class="tablink" id="notifications-tab">Appointments/Notifications</button>
 </div>
 
 <div id="patientInfo" class="tabcontent">
