--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -1,3 +1,4 @@
+<div id="top-head"></div>
 <div id="welcome-banner">
   <div id="title-banner">
     <img id="myimage" src="healthProject\src\app\images\Dose.png" alt="DoseAlert Logo">
