added fading in text to login/sign up, as well as the tabs. Background colors removed and have been made an off-white. A few issues surrounding login/submit where the tabs wont immediately show up

--- a/healthProject/src/app/main.component.css
+++ b/healthProject/src/app/main.component.css
@@ -9,8 +9,37 @@
 	padding-bottom: 4%
 }
 
+.fade-in-text {
+	animation: fadeIn 6s;
+  }
+
+  @keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+
+  @-moz-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-webkit-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-o-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-ms-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+
 #welcome-banner{
-	background-color:bisque;
+
 	color:rgb(14, 47, 23);
 	font-size: 40px;
 	text-align:center;
