--- a/healthProject/src/app/main.component.html
+++ b/healthProject/src/app/main.component.html
@@ -9,7 +9,6 @@
       <button id="signUp">Sign up</button>
   </div>
 </div>
-
-<div id="entry"></div>
+<div id="entry" class="fade-in-text"></div>
 <div id="new-user"></div>
 <div id="user-homepage"></div>
