--- a/healthProject/src/signup/signup.component.css
+++ b/healthProject/src/signup/signup.component.css
@@ -39,6 +39,14 @@
 	padding: 30px;
 }
 
+#submit{
+	border-radius: 4px;
+	background-color: aquamarine;
+	border-color: black;
+	border-style:solid;
+	box-shadow: 0px 2px black;
+}
+
 input[type=text], input[type=password] {
 	width: 100%;
 	padding: 12px 20px;
