--- a/healthProject/src/user_home/user_home.component.html
+++ b/healthProject/src/user_home/user_home.component.html
@@ -5,7 +5,7 @@
 <button class="tablink" id="notifications-tab">Appointments/Notifications</button>
 </div>
 
-<div id="patientInfo" class="tabcontent">
+<div id="patientInfo" class="fade-in-text">
     <p>Username: <span id="patient-username"></span></p>
     <p>Height: <span id="patient-height"></span></p>
     <p>Weight: <span id="patient-weight"></span></p>
@@ -13,14 +13,14 @@
   </div>
 
 
-  <div id="healthprovider-info" class="tabcontent">
+  <div id="healthprovider-info" class="fade-in-text">
     <h3>Hospital: <span id="hospital-name"></span></h3>
     <p>Primary Doctor: <span id="doctor-name"></span></p>
     <p>Primary Doctor Number: <span id="docotor-number"></span></p>
     <p>Health Insurance: <span id="health-insurance"></span></p>
   </div>
 
-  <div id="perscription-diagnoses" class="tabcontent">
+  <div id="perscription-diagnoses" class="fade-in-text">
     <h3>Rx Number: <span id="rx-number"></span></h3>
 
     <p>Current Perscriptions: <span id="perscriptions"></span>
@@ -39,7 +39,7 @@
   
   </div>
 
-  <div id="notifications" class="tabcontent">
+  <div id="notifications" class="fade-in-text">
     <h3>Recent Notifications:</h3>
     <p>Upcoming Appointments: </p><div id="appointments"></div>
     <p>Perscription Reminders: </p><div id="perscription-reminders"></div>
