--- a/healthProject/src/login/login.component.css
+++ b/healthProject/src/login/login.component.css
@@ -18,8 +18,15 @@
 #enterButtons{
 	padding: 20px
 }
+#InUserID{
+	width: 20%
+}
+#InKeyID{
+	width: 20%;
+}
 
 #login{
+	display:inline-flex;
 	font-family:'Courier New', Courier, monospace;
 	font-weight: bold;
 	border-radius: 100px;
@@ -39,6 +46,14 @@
 	padding: 30px;
 }
 
+#submit{
+	border-radius: 4px;
+	background-color: aquamarine;
+	border-color: black;
+	border-style:solid;
+	box-shadow: 0px 2px black;
+}
+
 input[type=text], input[type=password] {
 	width: 100%;
 	padding: 12px 20px;
@@ -49,7 +64,6 @@ input[type=text], input[type=password] {
 	box-sizing: border-box;
   }
   
-  /* Style the submit button */
   input[type=submit] {
 	width: 100%;
 	background-color: #04AA6D;
@@ -61,7 +75,6 @@ input[type=text], input[type=password] {
 	cursor: pointer;
   }
   
-  /* Add a background color to the submit button on mouse-over */
   input[type=submit]:hover {
 	background-color: #45a049;
   }
