--- a/healthProject/src/app/main.component.css
+++ b/healthProject/src/app/main.component.css
@@ -43,9 +43,9 @@
 	color:rgb(14, 47, 23);
 	font-size: 40px;
 	text-align:center;
-	font-family:lucidia handwriting;
+	font-family:sans-serif;
 	border-radius: 20px;
-	font-style: italic;
+	font-style: bold;
 	
 }
 
